@@ -239,9 +239,9 @@ public class TestRollingUpgrade {
       Assert.assertTrue(dfs2.exists(baz));
 
       //finalize rolling upgrade
-      final RollingUpgradeInfo finalize = dfs2.rollingUpgrade(RollingUpgradeAction.FINALIZE);
-      LOG.info("FINALIZE: " + finalize);
-      Assert.assertEquals(info1.getStartTime(), finalize.getStartTime());
+      final RollingUpgradeInfo finalize = dfs2.rollingUpgrade(
+          RollingUpgradeAction.FINALIZE);
+      Assert.assertNull(finalize);
 
       LOG.info("RESTART cluster 2 with regular startup option");
       cluster2.getNameNodeInfos()[0].setStartOpt(StartupOption.REGULAR);
@@ -385,7 +385,7 @@ public class TestRollingUpgrade {
       Assert.assertTrue(fsimage.hasRollbackFSImage());
 
       info = dfs.rollingUpgrade(RollingUpgradeAction.FINALIZE);
-      Assert.assertTrue(info.isFinalized());
+      Assert.assertNull(info);
       Assert.assertTrue(dfs.exists(foo));
 
       // Once finalized, there should be no more fsimage for rollbacks.
