@@ -723,6 +723,8 @@ Release 2.6.0 - UNRELEASED
     HDFS-7147. Update archival storage user documentation.
     (Tsz Wo Nicholas Sze via wheat9)
 
+    HDFS-7340. Make rollingUpgrade start/finalize idempotent. (jing9)
+
     BREAKDOWN OF HDFS-6134 AND HADOOP-10150 SUBTASKS AND RELATED JIRAS
   
       HDFS-6387. HDFS CLI admin tool for creating & deleting an
